# get_gifts_backend

./: .env.example  .gitignore  README.md  auth.py  config.py  huey_config.py  main.py  model.py  models.py  pyproject.toml  req.txt  requirements.txt  sql_api.py  tasks.py
models/: Gift.py  User.py
routers/: __init__.py  gifts.py  users.py
utils/: auth.py  parsers.py  sql_api.py
